<resources>
    <string name="app_name">Kencelengan</string>
    <string name="add">Add</string>
    <string name="navigation">navigation</string>
    <string name="nama">Nama:</string>
    <string name="nomor">Nomor:</string>
    <string name="nama_donatur">Nama Donatur</string>
    <string name="nomor_hp">Nomor Hp</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_telpon">Edit Telpon</string>
    <string name="tambah">Simpan</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="kembali">Batal</string>
    <string name="setting">Setting</string>
    <string name="mulai_timer">Mulai Timer</string>
    <string name="batalkan_timer">Batalkan Timer</string>
    <string name="lokasi_donatur">Lokasi Donatur</string>
    <string name="tanggal">Atur Tanggal</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="pilih_waktu">Pilih Waktu</string>
    <string name="waktu">Atur Waktu</string>
    <string name="addmap">addmap</string>
    <string name="belum_dipilih">Belum dipilih</string>
    <string name="mylocation">mylocation</string>
    <string name="update">Update</string>
    <string name="reminder">Reminder</string>
    <string name="kencel">Kencel</string>
    <!--notification messages -->
    <string name="used_for_string_notification">Used for %1$s notifications</string>
    <string name="google_icon">google icon</string>
    <string name="login_with_google">Login with Google</string>
    <string name="google_to_login">Mohon login untuk melanjutkan</string>
    <string name="my_saving">KencelenganKu</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
</resources>